# superpipe

./: .gitignore  404.html  CNAME  README.md  index.html  index.md  liblab.config.json  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
blog/: index.html  index.md
concepts/: index.html  index.md
concepts/grid_search/: grid_search.md  index.html
concepts/models/: index.html
concepts/pipelines/: index.html  pipelines.md
concepts/steps/: index.html  index.md
consulting/: index.html
docs/: CNAME  build.md  concepts.md  consulting.md  evaluate.md  getting_started.md  index.md  optimize.md  philosophy.md  principles.md  roadmap.md  start.md  use_cases.md  why.md  why_superpipe.md  workflow.md
docs/blog/: index.md
docs/concepts/: grid_search.md  models.md  pipelines.md
docs/examples/: grid_search.ipynb  pdf_extraction.ipynb
docs/intro/: why_superpipe.md
docs/overrides/: main.html
docs/studio/: index.md
docs/using/: grid_search.md  index.md  models.md  pipelines.md
evaluate/: index.html
examples/: index.html  index.md  pdf_extraction.ipynb  product_categorization.ipynb
examples/business_classification/: business_classification.ipynb
examples/comparing_pipelines/: furniture.ipynb
examples/generative_output/: jokes.ipynb
examples/product_categorization/: product_categorization.ipynb
labelgen/: grid_search.py  llm.py  models.py  openai.py  util.py
labelgen/steps/: custom.py  embedding_classification.py  llm_step.py
labelkit/: __init__.py  config.py  grid_search.py  llm.py  models.py  openai.py  pipeline.py  pydantic.py  util.py
labelkit/steps/: __init__.py  custom.py  embedding_classification.py  llm_step.py  serp.py  simple_llm_step.py  step.py
optimize/: index.html
output/: api-schema-validation.json
output/python/: .gitignore  .manifest.json  README.md  install.cmd  install.sh  pyproject.toml
principles/: index.html  principles.md
roadmap/: index.html
search/: search_index.json
studio/: index.html  index.md
superpipe/: __init__.py  clients.py  config.py  grid_search.py  llm.py  models.py  openai.py  pipeline.py  pydantic.py  util.py
superpipe/steps/: __init__.py  custom.py  embedding_classification.py  embedding_search.py  llm_step.py  serp.py  (+5 more)
use_cases/: index.html
why/: index.html  why.md
workflow/: index.html  workflow.md
(+78 files in other folders)
