[tool.poetry]
name = "labelkit"
version = "0.0.6"
description = "build unstructured to structured data transformation pipelines"
authors = ["Aman Dhesi <aman@stelolabs.com>"]
license = "MIT"
packages = [{ include = "labelkit" }]
readme = "README.md"
repository = "https://github.com/villagecomputing/labelkit"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
openai = "^1.3.9"
cohere = "^4.38"
faiss-cpu = "^1.7.4"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
termcolor = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
