[tool.poetry]
name = "superpipe-py"
version = "0.1.5"
description = "build unstructured to structured data transformation pipelines"
authors = ["Aman Dhesi <aman@stelolabs.com>"]
license = "MIT"
packages = [{ include = "superpipe" }]
readme = "README.md"
repository = "https://github.com/villagecomputing/superpipe"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
openai = "^1.3.9"
faiss-cpu = "^1.7.4"
pydantic = "^2.6.1"
prettytable = "^3.10.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
termcolor = "^2.3.0"
ipykernel = "^6.29.2"
tqdm = "^4.66.2"
mkdocs-material = "^9.5.13"
pymdown-extensions = "^10.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
